--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,14 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/trymjorgensen/Documents/Development/flutter
-FLUTTER_APPLICATION_PATH=/Users/trymjorgensen/Documents/Github/EiT-Group3-TTK4852/satreelight
+FLUTTER_ROOT=E:\Programs\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Gaute\Documents\Projects\EiT\SaTreeLight
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/trymjorgensen/Documents/Github/EiT-Group3-TTK4852/satreelight/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-EXCLUDED_ARCHS=arm64
-DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=true
+TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/trymjorgensen/Documents/Github/EiT-Group3-TTK4852/satreelight/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
