--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-    sdk: ">=2.16.1 <3.0.0"
+    sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,23 +29,24 @@ environment:
 dependencies:
     cupertino_icons: ^1.0.2
     decorated_icon: ^1.2.1
-    flex_color_scheme: ^4.2.0
+    flex_color_scheme: ^5.0.1
     flutter:
         sdk: flutter
     flutter_map: ^0.14.0
     flutter_map_marker_cluster: ^0.4.4
-    flutter_riverpod: ^1.0.3
+    flutter_riverpod: ^1.0.4
     flutter_staggered_grid_view: ^0.6.1
-    google_fonts: ^2.3.1
+    google_fonts: ^3.0.1
+    latlong2: ^0.8.1
     map_controller:
         git: https://github.com/mpinkard/map_controller.git
     percent_indicator: ^4.0.0
     rename: ^2.0.1
     themed: ^3.0.2
-    url_launcher: ^6.0.20
+    url_launcher: ^6.1.2
 
 dev_dependencies:
-    flutter_lints: ^1.0.0
+    flutter_lints: ^2.0.1
     flutter_test:
         sdk: flutter
 
