--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@
 .pub/
 /build/
 pubspec.lock
+*.g.dart
 
 # Web related
-lib/generated_plugin_registrant.dart
 
 # Symbolication related
 app.*.symbols
