--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,27 +10,28 @@
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
-    - prefer_single_quotes
-    - slash_for_doc_comments
-    - always_use_package_imports
-    - avoid_relative_lib_imports
-    - avoid_empty_else
-    - avoid_returning_null_for_future
-    - comment_references
-    - empty_statements
-    - iterable_contains_unrelated_type
-    - list_remove_unrelated_type
+    # The lint rules applied to this project can be customized in the
+    # section below to disable rules from the `package:flutter_lints/flutter.yaml`
+    # included above or to enable additional rules. A list of all available lints
+    # and their documentation is published at
+    # https://dart-lang.github.io/linter/lints/index.html.
+    #
+    # Instead of disabling a lint rule for the entire project in the
+    # section below, it can also be suppressed for a single line of code
+    # or a specific dart file by using the `// ignore: name_of_lint` and
+    # `// ignore_for_file: name_of_lint` syntax on the line or in the file
+    # producing the lint.
+    rules:
+        - prefer_single_quotes
+        - slash_for_doc_comments
+        - always_use_package_imports
+        - avoid_relative_lib_imports
+        - avoid_empty_else
+        - avoid_returning_null_for_future
+        - comment_references
+        - empty_statements
+        - iterable_contains_unrelated_type
+        - list_remove_unrelated_type
+        - use_super_parameters
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
