--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,9 +5,14 @@
 # IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
 # invoked from the command line by running `flutter analyze`.
 
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+include: package:very_good_analysis/analysis_options.yaml
+
+analyzer:
+    exclude:
+        - build/**
+        - lib/**.g.dart
+    plugins:
+        - custom_lint
 
 linter:
     # The lint rules applied to this project can be customized in the
@@ -22,16 +27,7 @@ linter:
     # `// ignore_for_file: name_of_lint` syntax on the line or in the file
     # producing the lint.
     rules:
-        - prefer_single_quotes
-        - slash_for_doc_comments
-        - always_use_package_imports
-        - avoid_relative_lib_imports
-        - avoid_empty_else
-        - avoid_returning_null_for_future
-        - comment_references
-        - empty_statements
-        - iterable_contains_unrelated_type
-        - list_remove_unrelated_type
-        - use_super_parameters
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+        avoid_print: true # Uncomment to disable the `avoid_print` rule
+        prefer_single_quotes: true # Uncomment to enable the `prefer_single_quotes` rule
+        public_member_api_docs: false
+        use_setters_to_change_properties: false
