--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
     flex_color_scheme: ^7.0.0-dev.3
     flutter:
         sdk: flutter
-    flutter_hooks: ^0.18.6
     flutter_map: ^3.1.0
     flutter_map_marker_cluster: ^1.1.0
     flutter_riverpod: ^2.3.2
@@ -44,14 +43,17 @@ dependencies:
     latlong2: ^0.8.1
     percent_indicator: ^4.2.3
     rename: ^2.1.1
+    riverpod_annotation: ^2.0.2
     themed: ^4.0.0
     url_launcher: ^6.1.10
 
 dev_dependencies:
+    build_runner: ^2.3.3
     custom_lint: ^0.3.2
     flutter_lints: ^2.0.1
     flutter_test:
         sdk: flutter
+    riverpod_generator: ^2.1.4
     riverpod_lint: ^1.1.6
     very_good_analysis: ^4.0.0+1
 
