--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,33 +29,33 @@ environment:
 dependencies:
     decorated_icon: ^1.2.1
     fast_cached_network_image: ^1.1.1
-    flex_color_scheme: ^7.0.0
+    fl_chart: ^0.61.0
+    flex_color_scheme: ^7.0.1
     flutter:
         sdk: flutter
     flutter_map: ^3.1.0
     flutter_map_marker_cluster: ^1.1.0
-    flutter_riverpod: ^2.3.2
+    flutter_riverpod: ^2.3.4
     flutter_staggered_grid_view: ^0.6.2
     google_fonts: ^4.0.3
-    graphic: ^2.0.0
-    hooks_riverpod: ^2.3.2
+    hooks_riverpod: ^2.3.4
     image: ^4.0.15
     intl: ^0.18.0
     latlong2: ^0.8.1
     percent_indicator: ^4.2.3
     rename: ^2.1.1
-    riverpod_annotation: ^2.0.2
+    riverpod_annotation: ^2.0.4
     themed: ^4.0.0
     url_launcher: ^6.1.10
 
 dev_dependencies:
     build_runner: ^2.3.3
-    custom_lint: ^0.3.2
+    custom_lint: ^0.3.3
     flutter_lints: ^2.0.1
     flutter_test:
         sdk: flutter
-    riverpod_generator: ^2.1.4
-    riverpod_lint: ^1.1.6
+    riverpod_generator: ^2.1.6
+    riverpod_lint: ^1.2.0
     very_good_analysis: ^4.0.0+1
 
 # For information on the generic Dart part of this file, see the
