--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
     sdk: ">=2.19.0 <3.0.0"
@@ -29,8 +29,8 @@ environment:
 dependencies:
     decorated_icon: ^1.2.1
     fast_cached_network_image: ^1.1.1
-    fl_chart: ^0.61.0
-    flex_color_scheme: ^7.0.1
+    fl_chart: ^0.62.0
+    flex_color_scheme: ^7.0.2
     flutter:
         sdk: flutter
     flutter_map: ^3.1.0
@@ -47,6 +47,7 @@ dependencies:
     riverpod_annotation: ^2.0.4
     themed: ^4.0.0
     url_launcher: ^6.1.10
+    vector_math: ^2.1.4
 
 dev_dependencies:
     build_runner: ^2.3.3
