--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,9 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "flutter",
-			"command": "flutter",
+			"type": "dart",
+			"command": "dart",
 			"args": [
-				"pub",
 				"run",
 				"build_runner",
 				"watch",
@@ -15,7 +14,7 @@
 				"$dart-build_runner"
 			],
 			"group": "build",
-			"label": "flutter: flutter pub run build_runner watch",
+			"label": "dart: dart run build_runner watch",
 			"detail": ""
 		}
 	]
