--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+1
 
 environment:
-    sdk: ">=2.19.0 <3.0.0"
+    sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,30 +30,32 @@ dependencies:
     collection: ^1.17.1
     cupertino_icons: ^1.0.5
     decorated_icon: ^1.2.1
-    dio: ^4.0.6
-    fast_cached_network_image: ^1.1.1
+    dio: ^5.1.2
+    fast_cached_network_image: ^1.2.0
     fl_chart: ^0.62.0
-    flex_color_scheme: ^7.0.3
+    flex_color_scheme: ^7.0.5
     flutter:
         sdk: flutter
-    flutter_map: ^3.1.0
-    flutter_map_marker_cluster: ^1.1.0
-    flutter_riverpod: ^2.3.5
-    google_fonts: ^4.0.3
+    flutter_map: ^4.0.0
+    flutter_map_marker_cluster:
+        git: https://github.com/nploi/flutter_map_marker_cluster
+
+    flutter_riverpod: ^2.3.6
+    google_fonts: ^4.0.4
     intl: ^0.18.1
-    latlong2: ^0.8.1
-    riverpod_annotation: ^2.1.0
+    latlong2: ^0.8.2
+    riverpod_annotation: ^2.1.1
     themed: ^4.0.0
-    url_launcher: ^6.1.10
+    url_launcher: ^6.1.11
 
 dev_dependencies:
-    build_runner: ^2.3.3
-    custom_lint: ^0.3.4
+    build_runner: ^2.3.4
+    custom_lint: ^0.4.0
     flutter_test:
         sdk: flutter
-    riverpod_generator: ^2.2.0
-    riverpod_lint: ^1.3.0
-    very_good_analysis: ^4.0.0+1
+    riverpod_generator: ^2.2.1
+    riverpod_lint: ^1.3.2
+    very_good_analysis: ^5.0.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
