--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,8 @@
 				"web",
 				"${cwd}/lib/main.dart",
 				"--release",
+				"--web-renderer",
+				"canvaskit",
 				"--base-href",
 				"/apps/satreelight/"
 			],
