--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
     collection: ^1.17.1
     cupertino_icons: ^1.0.5
     decorated_icon: ^1.2.1
-    dio: ^5.1.2
+    dio: ^5.2.1+1
     fast_cached_network_image: ^1.2.0
-    fl_chart: ^0.62.0
+    fl_chart: ^0.63.0
     flex_color_scheme: ^7.0.5
     flutter:
         sdk: flutter
@@ -47,7 +47,7 @@ dependencies:
     url_launcher: ^6.1.11
 
 dev_dependencies:
-    build_runner: ^2.3.4
+    build_runner: ^2.3.5
     custom_lint: ^0.4.0
     flutter_test:
         sdk: flutter
