--- a/.github/workflows/build_and_deploy_web.yml
+++ b/.github/workflows/build_and_deploy_web.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build and deploy
+name: Build and deploy web
 
 on:
     push:
@@ -13,6 +13,8 @@ on:
 
 permissions:
     contents: write
+    pages: write
+    id-token: write
 
 jobs:
     build:
@@ -22,6 +24,9 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            - name: Setup Pages
+              uses: actions/configure-pages@v3
+
             - name: Flutter action
               uses: subosito/flutter-action@v2.10.0
               with:
@@ -30,16 +35,27 @@ jobs:
             - name: Install dependencies
               run: flutter pub get
 
-            - name: Run build_runner to ensure up to date files
-              run: flutter pub run build_runner build --delete-conflicting-outputs
-
             - name: Build web app
               run: flutter build web --release --web-renderer canvaskit --base-href /SaTreeLight/
 
             - name: Add data
               run: cp -r data build/web
 
-            - name: Deploy
-              uses: JamesIves/github-pages-deploy-action@v4
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v2
               with:
-                  folder: build/web
+                  path: "build/web"
+
+    deploy:
+        runs-on: ubuntu-latest
+
+        needs: build
+
+        steps:
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v2
+
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
